--- a/public/lezione-finale/step-4-sass/styles.scss
+++ b/public/lezione-finale/step-4-sass/styles.scss
@@ -40,7 +40,7 @@ body {
 
     .nav-link {
         color: #6c757d;
-        transition: all $transition-speed ease;
+        transition: all $transition-speed ease; cisoaoaoaoa
 
         &:hover {
             color: $primary-gradient-start;
